--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <img id="profile-photo" src="assets/photo.jpg" />
       </a-assets>
 
-      <a-marker type="pattern" patternUrl="assets/pattern-ai.patt">
+      <a-marker-camera
+        preset="custom"
+        type="pattern"
+        patternUrl="assets/pattern-ai.patt"
+      >
         <a-plane
           src="#texture"
           height="1.15"
@@ -37,7 +41,7 @@
           position="-0.5 0.01 0"
           rotation="-90 0 0"
         ></a-image>
-      </a-marker>
+      </a-marker-camera>
       <a-entity camera></a-entity>
     </a-scene>
   </body>
